--- a/src/Sandbox/package.json
+++ b/src/Sandbox/package.json
@@ -19,14 +19,14 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "es6-promise": "^3.1.2",
     "babel-preset-es2015": "^6.5.0",
-    "browser-sync": "^2.11.1",
     "browserify": "^13.0.0",
     "browserify-ngannotate": "^2.0.0",
     "browserify-shim": "^3.8.12",
-    "colors": "^1.1.2",
+    "browser-sync": "^2.11.1",
     "debowerify": "^1.3.1",
+    "del": "2.2.0",
+    "es6-promise": "^3.1.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
@@ -40,9 +40,9 @@
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
+    "watchify": "^3.7.0",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0"
+    "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": { },
   "browser": { },
