--- a/src/Sandbox/bower.json
+++ b/src/Sandbox/bower.json
@@ -14,6 +14,7 @@
     "bootstrap-sass": "^3.3.6",
     "animate.css": "^3.3.6",
     "bourbon": "~4.2.6",
+    "swiper": "^3.3.1",
     "angular": "^1.5.0",
     "angular-animate": "^1.5.0",
     "angular-ui-router": "^0.2.18"
