--- a/src/Sandbox/bower.json
+++ b/src/Sandbox/bower.json
@@ -15,6 +15,7 @@
     "animate.css": "^3.3.6",
     "bourbon": "~4.2.6",
     "swiper": "^3.3.1",
+    "underscore": "^1.8.3",
     "angular": "^1.5.0",
     "angular-animate": "^1.5.0",
     "angular-ui-router": "^0.2.18"
