--- a/src/Sandbox/bower.json
+++ b/src/Sandbox/bower.json
@@ -18,6 +18,7 @@
     "underscore": "^1.8.3",
     "angular": "^1.5.0",
     "angular-animate": "^1.5.0",
-    "angular-ui-router": "^0.2.18"
+    "angular-ui-router": "^0.2.18",
+    "angular-ui-router-title": "^0.0.4"
   }
 }
