--- a/src/Sandbox/bower.json
+++ b/src/Sandbox/bower.json
@@ -16,6 +16,7 @@
     "bourbon": "~4.2.6",
     "owl-carousel2": "^2.0.0-beta.3",
     "underscore": "^1.8.3",
+    "highcharts": "^4.2.3",
     "angular": "^1.5.0",
     "angular-animate": "^1.5.0",
     "angular-ui-router": "^0.2.18",
