--- a/src/Sandbox/bower.json
+++ b/src/Sandbox/bower.json
@@ -1,7 +1,9 @@
 {
   "name": "ASP.NET",
   "private": true,
-  "authors": [""],
+  "authors": [
+    ""
+  ],
   "license": "",
   "ignore": [
     "**/.*",
@@ -19,7 +21,11 @@
     "highcharts": "^4.2.3",
     "angular": "^1.5.0",
     "angular-animate": "^1.5.0",
+    "angular-sanitize": "^1.5.3",
     "angular-ui-router": "^0.2.18",
     "angular-ui-router-title": "^0.0.4"
+  },
+  "resolutions": {
+    "angular": "^1.0.8"
   }
 }
