--- a/src/Sandbox/bower.json
+++ b/src/Sandbox/bower.json
@@ -17,6 +17,9 @@
     "animate.css": "^3.3.6",
     "bourbon": "~4.2.6",
     "owl-carousel2": "^2.0.0-beta.3",
+    "spinkit": "^1.2.5",
+    "ngInfiniteScroll": "^1.2.2",
+    "angular-utils-pagination": "^0.11.1",
     "underscore": "^1.8.3",
     "highcharts": "^4.2.3",
     "angular": "^1.5.0",
