--- a/src/Sandbox/bower.json
+++ b/src/Sandbox/bower.json
@@ -22,11 +22,17 @@
     "angular-utils-pagination": "^0.11.1",
     "underscore": "^1.8.3",
     "highcharts": "^4.2.3",
+    "highcharts-ng": "^0.0.11",
     "angular": "^1.5.0",
     "angular-animate": "^1.5.0",
     "angular-sanitize": "^1.5.3",
     "angular-ui-router": "^0.2.18",
     "angular-ui-router-title": "^0.0.4"
+  },
+  "overrides": {
+    "highcharts": {
+      "main": [ "highstock.js" ]
+    }
   },
   "resolutions": {
     "angular": "^1.0.8"
